--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,5 @@ jobs:
       - name: Install dependencies
         run: yarn
       - name: Run test
-        path: 2nd/02 Starting Project
-        run: yarn test
+        run: cd 2nd/02 Starting Project &&  yarn test
   
