--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,5 +13,8 @@ jobs:
       - name: Install dependencies
         run: yarn
       - name: Run test
-        run: cd 2nd/02 Starting Project &&  yarn test
+        run: |
+          cd 2nd
+          cd 02\ Starting\ Project 
+          yarn test
   
