--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,12 @@ jobs:
         with: 
           node-version: 18
       - name: Install dependencies
-        run: npm ci
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: install
       - name: Run test
         run: |
           cd 2nd
           cd 02\ Starting\ Project 
-          npm run test
+          yarn test
   
