--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,10 @@ jobs:
         with: 
           node-version: 18
       - name: Install dependencies
-        run: npm ci
+        run: |
+          cd 2nd
+          cd 02\ Starting\ Project 
+          npm ci
       - name: Run test
         run: |
           cd 2nd
