--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,6 +21,7 @@ jobs:
           cd 02\ Starting\ Project 
           npm run  test
   deploy:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
